--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -56,7 +56,7 @@
     }
 
     &:nth-child(3n+1):not(:only-child), &:nth-child(3n+3), &:only-child {
-        &.sectionCrowdCollect {
+        &.sectionCrowdCollect, &.sectionConfetti {
             background-image: url('./backgrounds/crowd_collect_blue_desktop.svg');
 
             @media (max-width: 900px) {
@@ -105,7 +105,7 @@
         }
     }
 
-    &CrowdCollect {
+    &CrowdCollect, &Confetti {
         background-image: url('./backgrounds/crowd_collect_yellow_desktop.svg');
         background-repeat: no-repeat;
         background-position: bottom -6rem center;
