try out font-display: swap; for better performance

--- a/src/components/style/webfont.less
+++ b/src/components/style/webfont.less
@@ -33,6 +33,7 @@
         url('../../../webfonts/3AD95C_0_0.woff2') format('woff2'),
         url('../../../webfonts/3AD95C_0_0.woff') format('woff'),
         url('../../../webfonts/3AD95C_0_0.ttf') format('truetype');
+    font-display: swap;
 }
 
 
@@ -44,4 +45,5 @@
         url('../../../webfonts/3AD95C_1_0.woff2') format('woff2'),
         url('../../../webfonts/3AD95C_1_0.woff') format('woff'),
         url('../../../webfonts/3AD95C_1_0.ttf') format('truetype');
+    font-display: swap;
 }
