--- a/src/components/SocialMedia/Button/style.module.less
+++ b/src/components/SocialMedia/Button/style.module.less
@@ -1,5 +1,16 @@
 .button {
-    &:hover {
-      color: var(--secondary-color);
-    }
+  &:hover {
+    color: var(--secondary-color);
   }
+
+  &XL {
+    font-size: 3em;
+  }
+
+  svg {
+    font-size: 1.3333333333em;
+    width: 1em;
+    vertical-align: -0.225em;
+    line-height: 0.75em;
+  }
+}
