SocialMediaButton: replace fort awesome package with individual SVGs

--- a/src/components/SocialMedia/Button/style.module.less
+++ b/src/components/SocialMedia/Button/style.module.less
@@ -2,4 +2,15 @@
   &:hover {
     color: var(--secondary-color);
   }
+
+  &XL {
+    font-size: 3em;
+  }
+
+  svg {
+    font-size: 1.3333333333em;
+    width: 1em;
+    vertical-align: -0.225em;
+    line-height: 0.75em;
+  }
 }
