SelfScan: make scanning part more prominent

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -33,6 +33,10 @@
 }
 
 .headingSelfScan {
-  margin: 4rem 0 1rem;
+  margin: 0 0 1rem;
   font-size: @fontSizeM;
+}
+
+.campaignVisualisations {
+  margin-top: 4rem;
 }
