--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -117,6 +117,11 @@
 
 .socialMediaButton {
     font-size: @fontSizeS;
+
+    svg {
+        height: 1em;
+        width: 1em;
+    }
 }
 
 .role {
