--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -117,6 +117,10 @@
 .socialMediaButton {
   font-size: @fontSizeS;
 
+  &:hover {
+    color: var(--font-color-secondary);
+  }
+
   svg {
     height: 1em;
     width: 1em;
