AboutUs: icon hover color

--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -118,6 +118,10 @@
 .socialMediaButton {
     font-size: @fontSizeS;
 
+    &:hover {
+        color: var(--font-color-secondary);
+    }
+
     svg {
         height: 1em;
         width: 1em;
