--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -67,6 +67,14 @@
         background-image: url('./backgrounds/crowd_collect_blue_mobile.svg');
       }
     }
+
+    &.sectionCrowdTravel {
+      background-image: url('./backgrounds/crowd_travel_blue_desktop.svg');
+
+      @media (max-width: 900px) {
+        background-image: url('./backgrounds/crowd_travel_blue_mobile.svg');
+      }
+    }
   }
 
   &:nth-child(3n + 2),
@@ -109,10 +117,26 @@
       }
     }
   }
-
   &CrowdCollect,
   &Confetti {
     background-image: url('./backgrounds/crowd_collect_yellow_desktop.svg');
+
+    @media (max-width: 900px) {
+      background-image: url('./backgrounds/crowd_collect_yellow_mobile.svg');
+    }
+  }
+
+  &CrowdTravel {
+    background-image: url('./backgrounds/crowd_travel_yellow_desktop.svg');
+
+    @media (max-width: 900px) {
+      background-image: url('./backgrounds/crowd_travel_yellow_mobile.svg');
+    }
+  }
+
+  &CrowdCollect,
+  &Confetti,
+  &CrowdTravel {
     background-repeat: no-repeat;
     background-position: bottom -6rem center;
     background-size: auto 130rem;
@@ -122,7 +146,6 @@
     }
 
     @media (max-width: 900px) {
-      background-image: url('./backgrounds/crowd_collect_yellow_mobile.svg');
       padding-bottom: 23rem;
       background-position: bottom -3rem center;
       background-size: auto 160rem;
