SelfScan: abitly to re-try if mail or ID is wrong

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -35,6 +35,10 @@
   justify-content: flex-end;
 }
 
+.buttonContainerMessage {
+  margin-top: 1rem;
+}
+
 .label {
   @media (max-width: @breakPointS) {
     font-size: @fontSizeXS;
