--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -34,6 +34,10 @@
     justify-content: flex-end;
 }
 
+.buttonContainerMessage {
+    margin-top: 1rem;
+}
+
 .label {
     @media (max-width: @breakPointS) {
         font-size: @fontSizeXS;
