--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -5,6 +5,10 @@
 }
 
 .container {
+    --bg-color: @yellow;
+    --font-color: @red;
+    --secondary-color: @blueBright;
+    --text-on-secondary-color: @yellow;
     position: fixed;
     top: 0;
     left: 0;
@@ -12,10 +16,17 @@
     width: 100%;
     background: @red;
     z-index: 100;
+    background-color: var(--bg-color);
+    color: var(--font-color);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    overflow: scroll;
 }
 
 .closeButton {
-    position: absolute;
+    position: fixed;
     top: 1rem;
     right: 1rem;
     height: 4rem;
@@ -26,4 +37,21 @@
     background-size: cover;
     background-color: transparent;
     border: none;
+
+    @media (max-width: @breakPointM) {
+        width: 2rem;
+        height: 2rem;
+    }
+}
+
+.title {
+    margin-top: 0;
+
+    @media (max-width: @breakPointM) {
+        padding-right: 3rem;
+    }
+}
+
+.body {
+    max-width: 500px;
 }
