--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -21,7 +21,7 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    padding: 2rem 1rem;
     overflow: scroll;
 }
 
@@ -53,5 +53,5 @@
 }
 
 .body {
-    max-width: 500px;
+    max-width: @contentWidthL;
 }
