--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -31,7 +31,7 @@
     background: transparent;
     font-family: inherit;
     line-height: inherit;
-    color: inherit;
+    color: var(--font-color);
     cursor: pointer;
 }
 
