Header: add tooltip to donation button

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -182,6 +182,11 @@
   }
 }
 
+.ctaButtonWrapper {
+  display: flex !important;
+  align-items: center;
+}
+
 .ctaButton {
   align-self: center;
   --font-color: @blueBright;
@@ -192,7 +197,6 @@
 
   @media (max-width: @breakPointS) {
     animation-name: wiggleRotated;
-
     font-size: @fontSizeS !important;
     padding: 0.5rem 0.5rem 0.2rem !important;
     margin: 0 -2rem 0 -4rem;
