Header: fix for FF and Safari

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -22,6 +22,11 @@
 .title {
   grid-column: 2;
   margin: 0.8rem 0;
+  width: 15rem;
+
+  @media (max-width: @breakPointS) {
+    width: 10.7rem;
+  }
 }
 
 .inner {
