Header: button red and tilted to be a little louder

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -194,7 +194,7 @@
 
 .ctaButton {
   align-self: center;
-  --font-color: @blueBright;
+  --font-color: @red;
   animation-name: wiggle;
   animation-duration: 8s;
   animation-iteration-count: infinite;
@@ -219,25 +219,25 @@
 
 @keyframes wiggle {
   0% {
-    transform: rotate(3deg);
+    transform: rotate(-13deg);
   }
   2% {
-    transform: rotate(-3deg);
+    transform: rotate(-7deg);
   }
   4% {
-    transform: rotate(3deg);
+    transform: rotate(-13deg);
   }
   6% {
-    transform: rotate(-3deg);
+    transform: rotate(-7deg);
   }
   8% {
-    transform: rotate(3deg);
+    transform: rotate(-13deg);
   }
   10% {
-    transform: none;
+    transform: rotate(-10deg);
   }
   100% {
-    transform: none;
+    transform: rotate(-10deg);
   }
 }
 
