--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -22,6 +22,10 @@
         &:first-child {
             margin-top: 0;
         }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
