--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -40,6 +40,7 @@
   display: inline;
   padding: 0;
   margin: 0;
+  height: 1.15em;
   background: transparent;
   color: inherit;
   font-size: inherit;
