Inline button: underlining a tiny bit higher to be consistent with a

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -39,6 +39,7 @@
     display: inline;
     padding: 0;
     margin: 0;
+    height: 1.15em;
     background: transparent;
     color: inherit;
     font-size: inherit;
