--- a/src/components/utils/contentfulJsonToHtml.module.less
+++ b/src/components/utils/contentfulJsonToHtml.module.less
@@ -2,6 +2,49 @@
     font-weight: normal;
 }
 
+.question {
+    font-weight: bold;
+    font-family: inherit;
+    background: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    font-size: inherit;
+    color: inherit;
+    text-align: left;
+}
+
+.answerContainer {
+    overflow: hidden;
+    padding-bottom: 0rem;
+    transition: .3s ease height;
+
+    &.open {
+        height: auto;
+    }
+
+    &.animating {
+        height: auto;
+    }
+
+    &.closed {
+        height: 0;
+    }
+}
+
+.answer {
+    padding-top: 1rem;
+
+    p:first-child {
+        margin-top: 0;
+    }
+
+    p:last-child {
+        margin-bottom: 0;
+    }
+}
+
 .questionAndAnswer {
-    margin-bottom: 4rem;
+    margin: 2rem 0;
 }
