--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -52,6 +52,14 @@
                 background-image: url('./backgrounds/crowd_travel_blue_mobile.svg');
             }
         }
+
+        &.sectionCrowdQuestion {
+            background-image: url('./backgrounds/crowd_question_blue_desktop.svg');
+
+            @media (max-width: 900px) {
+                background-image: url('./backgrounds/crowd_question_blue_mobile.svg');
+            }
+        }
     }
 
     &:nth-child(3n+2), &:nth-child(3n+3), &:only-child {
@@ -128,7 +136,15 @@
         }
     }
 
-    &CrowdCollect, &Confetti, &CrowdTravel {
+    &CrowdQuestion {
+        background-image: url('./backgrounds/crowd_question_yellow_desktop.svg');
+
+        @media (max-width: 900px) {
+            background-image: url('./backgrounds/crowd_question_yellow_mobile.svg');
+        }
+    }
+
+    &CrowdCollect, &Confetti, &CrowdTravel, &CrowdQuestion  {
         background-repeat: no-repeat;
         background-position: bottom -6rem center;
         background-size: auto 130rem;
