tune breakpoints and font sizes

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -119,12 +119,12 @@
     transition: width 1s ease;
     z-index: 3;
 
-    @media (max-width: @breakPointS) {
-        font-size: @fontSizeXXL;
+    @media (max-width: @breakPointM) {
+        font-size: @fontSizeXL;
     }
 
-    @media (max-width: 360px) {
-        font-size: @fontSizeXL;
+    @media (max-width: 370px) {
+        font-size: @fontSizeL;
     }
 
     &::before {
