--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -178,6 +178,21 @@
   cursor: default;
 }
 
+.loginParent {
+  margin-left: 2rem;
+
+  .loginParentTitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .loginParentAvatar {
+      width: 2rem;
+      margin-right: 0.75rem;
+    }
+  }
+}
+
 .link {
   .menuLink();
 
