Header: CTA button font size smalle on medium sized screen
to accomodate longer text

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -202,7 +202,6 @@
 
   @media (max-width: @breakPointS) {
     animation-name: wiggleRotated;
-    font-size: @fontSizeS !important;
     padding: 0.5rem 0.5rem 0.2rem !important;
     margin: 0 -2rem 0 -2rem;
     transform: rotate(20deg);
@@ -210,6 +209,10 @@
     &:not(:hover) {
       background: @grey !important;
     }
+  }
+
+  @media (max-width: @breakPointL) {
+    font-size: @fontSizeS !important;
   }
 
   @media (max-width: 370px) {
