--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -200,7 +200,6 @@
 
   @media (max-width: @breakPointS) {
     animation-name: wiggleRotated;
-    font-size: @fontSizeS !important;
     padding: .5rem .5rem .2rem !important;
     margin: 0 -2rem 0 -2rem;
     transform: rotate(20deg);
@@ -208,6 +207,10 @@
     &:not(:hover) {
       background: @grey !important;
     }
+  }
+
+  @media (max-width: @breakPointL) {
+    font-size: @fontSizeS !important;
   }
 
   @media (max-width: 370px) {
