--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -8,6 +8,10 @@
     font-size: @fontSizeL;
     font-weight: bold;
 
+    @media (max-width: @breakPointS) {
+        border-radius: @borderRadiusSmall;
+      }
+
     &.medium {
         font-size: @fontSizeM;
     }
