Changed header cta button border radius

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -199,6 +199,7 @@
   transform-origin: center;
 
   @media (max-width: @breakPointS) {
+    border-radius: @borderRadiusSmall !important;
     animation-name: wiggleRotated;
     padding: .5rem .5rem .2rem !important;
     margin: 0 -2rem 0 -2rem;
