--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -19,6 +19,7 @@
 @borderWidth: 1px;
 @borderWidthThick: 3px;
 @borderRadius: 1.3rem;
+@borderRadiusSmall: 0.9rem;
 @buttonPadding: 0.8rem 0.8rem 0.5rem;
 
 @headerHeight: 5rem;
