Changed header cta button border radius (#122)

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -201,6 +201,7 @@
   transform-origin: center;
 
   @media (max-width: @breakPointS) {
+    border-radius: @borderRadiusSmall !important;
     animation-name: wiggleRotated;
     padding: 0.5rem 0.5rem 0.2rem !important;
     margin: 0 -2rem 0 -2rem;
