--- a/src/components/Layout/CTAButton/style.module.less
+++ b/src/components/Layout/CTAButton/style.module.less
@@ -1,71 +1,89 @@
 @import '../../style/vars.less';
 
-.container {
-    &.hasIllustration {
-        margin-bottom: 1.8rem;
-        @media (max-width: @breakPointS) {
-            margin-bottom: 5rem;
-        }
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -1rem;
+  > * {
+    margin: 1rem;
+  }
+  @media (max-width: @breakPointS) {
+    margin: -0.5rem;
+    > * {
+      margin: 0.5rem;
     }
+  }
+}
+
+.container {
+  &.hasIllustration {
+    margin-bottom: 1.8rem;
+    @media (max-width: @breakPointS) {
+      margin-bottom: 5rem;
+    }
+  }
 }
 
 .inner {
-    position: relative;
-    display: inline-flex;
-    flex-wrap: wrap;
-    margin: -1rem;
+  position: relative;
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin: -1rem;
+
+  > * {
+    margin: 1rem;
+  }
+
+  @media (max-width: @breakPointM) {
+    margin: -0.5rem;
 
     > * {
-        margin: 1rem;
+      margin: 0.5rem;
     }
-
-    @media (max-width: @breakPointM) {
-        margin: -.5rem;
-
-        > * {
-            margin: .5rem;
-        }
-    }
+  }
 }
 
 .button {
-    @media (min-width: @breakPointM) {
-        font-size: @fontSizeL;
-    }
+  @media (min-width: @breakPointM) {
+    font-size: @fontSizeL;
+  }
 }
 
-.illustrationPointLeft, .illustrationPointLeftMobile {
-    section:nth-child(3n+1):not(:only-child) & {
-        &.yellow {
-            display: none;
-        }
+.illustrationPointLeft,
+.illustrationPointLeftMobile {
+  section:nth-child(3n + 1):not(:only-child) & {
+    &.yellow {
+      display: none;
     }
+  }
 
-    section:nth-child(3n+2) &, section:nth-child(3n+3) &, section:only-child & {
-        &.red {
-            display: none;
-        }
+  section:nth-child(3n + 2) &,
+  section:nth-child(3n + 3) &,
+  section:only-child & {
+    &.red {
+      display: none;
     }
+  }
 }
 
 .illustrationPointLeft {
-    position: absolute;
-    width: 13rem;
-    top: calc(100% - 7rem);
-    left: calc(100% + 4rem);
+  position: absolute;
+  width: 13rem;
+  top: calc(100% - 7rem);
+  left: calc(100% + 4rem);
 
-    @media (max-width: @breakPointS) {
-        display: none;
-    }
+  @media (max-width: @breakPointS) {
+    display: none;
+  }
 }
 
 .illustrationPointLeftMobile {
-    position: absolute;
-    width: 10rem;
-    top: calc(100% + 1rem);
-    left: 10rem;
+  position: absolute;
+  width: 10rem;
+  top: calc(100% + 1rem);
+  left: 10rem;
 
-    @media (min-width: @breakPointS) {
-        display: none;
-    }
+  @media (min-width: @breakPointS) {
+    display: none;
+  }
 }
