--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -101,6 +101,6 @@
 
 .linkUnderlined() {
   text-decoration: none;
-  display: inline-block;
-  box-shadow: inset 0 -0.1em currentColor;
+  box-shadow: 0 0.1em currentColor;
+  border-bottom: .05em transparent solid;
 }
