Rotated illustration and adjusted positioning

--- a/src/components/Forms/Signatures/style.module.less
+++ b/src/components/Forms/Signatures/style.module.less
@@ -19,3 +19,19 @@
     margin-bottom: 3rem;
     font-size: @fontSizeM;
 }
+
+.anonymousListDownloadInfo {
+    margin-top: 6rem;
+
+    @media (max-width: @breakPointS) {
+        margin-top: 21rem;
+    }
+}
+
+.illustrationRotated img {
+    @media (min-width: @breakPointS) {
+        top: calc(100% - 12rem);
+        left: calc(100% + 4rem);
+        transform: rotate(-20deg);
+    }
+}
