Just a demo - please don't merge yet

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -84,7 +84,6 @@
     height: 100%;
     width: 100%;
     z-index: 0;
-    transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
 
     .hasNotStarted & {
         border: 1px solid var(--font-color);
@@ -134,13 +133,11 @@
         height: 100%;
         width: 100%;
         z-index: 0;
-        transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
     }
 
     .barCurrentLabel {
         position: absolute;
         z-index: 1;
-        bottom: -.3rem;
         right: 1rem;
     }
 
@@ -264,3 +261,5 @@
         }
     }
 }
+
+.campaignVisualisations();
