--- a/src/components/Layout/CTAButton/style.module.less
+++ b/src/components/Layout/CTAButton/style.module.less
@@ -35,6 +35,9 @@
 }
 
 .illustrationPointLeft, .illustrationPointLeftMobile {
+    
+    .illustrationPointLeft();
+
     section:nth-child(3n+1):not(:only-child) & {
         &.yellow {
             display: none;
