--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -2,7 +2,7 @@
 
 .footer {
   .headerFooterGrid();
-  .globeBackground();
+  .footer();
   background-attachment: fixed;
   min-height: 15rem;
   padding: 2rem 0;
