--- a/src/components/MainIllustration/style.module.less
+++ b/src/components/MainIllustration/style.module.less
@@ -1,7 +1,9 @@
 @import '../style/vars.less';
 
 .container {
+    .container();
     background-attachment: fixed;
+    display: none;
 }
 
 .stage {
