--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -6,16 +6,8 @@
 }
 
 body {
-    font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    background: @grey;
+    .body();
     margin: 0;
-    color: @red;
-    --bg-color: @grey;
-    --font-color: @red;
-    --font-color-secondary: @blueBright;
-    --secondary-color: @yellow;
-    --text-on-secondary-color: @red;
     --grid-gap: 1rem;
 
     @media (min-width: @breakPointL) {
@@ -55,3 +47,4 @@ p {
         }
     }
 }
+
