--- a/src/components/style/webfont.less
+++ b/src/components/style/webfont.less
@@ -24,6 +24,8 @@
 
 /* @import must be at top of file, otherwise CSS will not work */
 @import (css) url("//hello.myfonts.net/count/3ad95c");
+@import (css) url("//fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+
 
 @font-face {
     font-family: 'Ideal';
