--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -2,9 +2,9 @@
 @inputWidth: 25rem;
 
 .textInput, .textInputInline, .textarea {
-    background: @white ;
+    background: @input-background;
+    color: @input-color;
     border: none;
-    color: @red;
     font-family: inherit;
     border-radius: 0;
     padding: @buttonPadding;
@@ -17,12 +17,12 @@
     }
 
     &::placeholder {
-        color: @grey;
+        color: @input-placeholder-color;
     }
 
     &:focus {
         outline: none;
-        box-shadow: inset 0 0 0 @borderWidthThick @red;
+        box-shadow: inset 0 0 0 @borderWidthThick @input-focus-box-shadow-color;
     }
 }
 
