--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -2,12 +2,13 @@
 
 .header {
   .headerFooterGrid();
+  .header();
   z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  background: @grey;
+  background: @header-background;
   grid-template-rows: @headerHeight;
 
   @media (max-width: @breakPointS) {
